--- a/UserService/Views/User/Edit.cshtml
+++ b/UserService/Views/User/Edit.cshtml
@@ -1,51 +1,53 @@
 @model UserService.Models.User
 
-<h2>Register</h2>
+<h2>Edit User</h2>
 
-<form asp-action="Register" asp-controller="User" method="post">
+<form asp-action="Edit" asp-controller="User" method="post">
+    <input asp-for="Id" type="hidden" name="Id" value="@Model.Id" />
     <div class="form-group">
         <label for="FirstName">*First Name:</label>
-        <input asp-for="FirstName" class="form-control" id="FirstName" name="FirstName" />
+        <input asp-for="FirstName" class="form-control" id="FirstName" name="FirstName" value="@Model.FirstName" />
     </div>
     <div class="form-group">
         <label for="LastName">*Last Name:</label>
-        <input asp-for="LastName" class="form-control" id="LastName" name="LastName" />
+        <input asp-for="LastName" class="form-control" id="LastName" name="LastName" value="@Model.LastName" />
     </div>
     <div class="form-group">
         <label for="Birthdate">*Birthdate:</label>
-        <input asp-for="Birthdate" class="form-control" id="Birthdate" name="Birthdate" />
+        <input asp-for="Birthdate" class="form-control" id="Birthdate" name="Birthdate" value="@Model.Birthdate" />
     </div>
     <div class="form-group">
         <label for="Email">*Email:</label>
-        <input asp-for="Email" class="form-control" id="Email" name="Email" />
+        <input asp-for="Email" class="form-control" id="Email" name="Email" value="@Model.Email" />
     </div>
     <div class="form-group">
         <label for="Password">*Password:</label>
-        <input asp-for="Password" class="form-control" id="Password" name="Password" />
+        <input asp-for="Password" class="form-control" id="Password" name="Password" value="@Model.Password" />
     </div>
     <div class="form-group">
         <label for="Phone">Phone:</label>
-        <input asp-for="PhoneNumber" class="form-control" id="PhoneNumber" name="PhoneNumber" />
+        <input asp-for="PhoneNumber" class="form-control" id="PhoneNumber" name="PhoneNumber"
+            value="@Model.PhoneNumber" />
     </div>
     <div class="form-group">
         <label for="Address">Address:</label>
-        <input asp-for="Address" class="form-control" id="Address" name="Address" />
+        <input asp-for="Address" class="form-control" id="Address" name="Address" value="@Model.Address" />
     </div>
     <div class="form-group">
         <label for="City">City:</label>
-        <input asp-for="City" class="form-control" id="City" name="City" />
+        <input asp-for="City" class="form-control" id="City" name="City" value="@Model.City" />
     </div>
     <div class="form-group">
         <label for="ZipCode">Zip:</label>
-        <input asp-for="ZipCode" class="form-control" id="ZipCode" name="ZipCode" />
+        <input asp-for="ZipCode" class="form-control" id="ZipCode" name="ZipCode" value="@Model.ZipCode" />
     </div>
     <div class="form-group">
         <label for="Country">Country:</label>
-        <input asp-for="Country" class="form-control" id="Country" name="Country" />
+        <input asp-for="Country" class="form-control" id="Country" name="Country" value="@Model.Country" />
     </div>
     <div class="form-group">
         <label for="Role">Role:</label>
-        <select asp-for="Role" class="form-control" id="Role" name="Role">
+        <select asp-for="Role" class="form-control" id="Role" name="Role" value="@Model.Role">
             <option value="Admin">Admin</option>
             <option value="User">User</option>
         </select>
@@ -59,20 +61,15 @@
         $("form").on("submit", function (event) {
             event.preventDefault();
 
-            var formData = $(this).serializeArray();
-            var dataObj = {};
+            var formData = $(this).serialize();
 
-            $(formData).each(function (i, field) {
-                dataObj[field.name] = field.value;
-            });
-
-            console.log(dataObj);
+            console.log(formData);
 
             $.ajax({
                 type: "POST",
-                url: "/User/Register",
-                data: JSON.stringify(dataObj),
-                contentType: "application/json",
+                url: "/User/Edit/" + $("input[name='Id']").val(),
+                data: formData, // Send the serialized form data
+                contentType: "application/x-www-form-urlencoded", // Content type for form data
                 success: function (data) {
                     // handle success
                     window.location.href = "/User";
